# c11-project-templates

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
libs/: CMakeLists.txt
libs/libexample/: CMakeLists.txt  example.c  example.h
main/: CMakeLists.txt  main.c
